--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "4.3.1",
-    "jquery": "3.4.1",
+    "jquery": "^3.4.1",
     "jquery.easing": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
